# derby

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
analysis/: __init__.py  epoch_agg_loader.py
configs/: all_policies_smoke_test.yaml  base_sweep.yaml  exp_1000.yaml  grid_sweep_1.yaml  grid_sweep_bottom.yaml  grid_sweep_middle.yaml  grid_sweep_small_test.yaml  grid_sweep_top.yaml  one_camp_n_days_base.yaml  one_camp_n_days_config.yaml  one_camp_n_days_v2_config.yaml  reinforce_unified_sweep.yaml  reinforce_unified_sweepspec.yaml  setup_1__days_1.yaml
configs/setup_1_days_1/: setup_1_days_1__all_policies.yaml
derby/core/: ad_structures.py  agents.py  auctions.py  basic_structures.py  environments.py  markets.py  pmf.py  pmfs.py  policies.py  states.py  utils.py
derby/experiments/: one_camp_n_days.py  one_camp_n_days_v2.py  sequential_auction.py
derby/policies/: reinforce.py  (+1 more)
docs/: MemoryAdvisory.md  Policies.md
legacy/: __init__.py  csvs_to_plots  log_to_csv  logs_to_csvs  logs_to_plots  one_camp_n_days.py  plot_results.py  sequential_auction.py
notebooks/: Modern Parquet Paper Plot Demo.ipynb  Policy Sweep Plot.ipynb  README.md
pipeline/: __init__.py  make_config_grid.py  make_grid.py  parallel_sweep.py  run_configs.py  run_experiment_sweep.py
results/: csvs_to_plots  epoch_agg_loader.py  log_to_csv  logs_to_csvs  logs_to_plots  parallel_sweep.py  plot_results.py
scripts/: run_grid_sweeps.sh
utils/: __init__.py  analysis.py  epoch_agg_loader.py  paper_plot.py  plot_utils.py
(+309 files in other folders)
